HelloUltraviolet/Fixtures/RejectedSource/Procedures/InvariantDiagnostics/Expected.uv
//! Expected diagnostic metadata for the InvariantDiagnostics rejected-source specimen.

expectedDiagnostic("E-SEM-2824", "diag.15.Invariants")
